# spotify-music-rust

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml
config/: log_setting.yaml
migrations/2025-05-09-080320_song_information/: down.sql  up.sql
migrations/2025-08-26-133857_song_youtube_detail/: down.sql  up.sql
migrations/2025-08-26-180034_song_info_add_youtube_video/: down.sql  up.sql
migrations/2025-08-29-203813_backend_task/: down.sql  up.sql
src/: constant.rs  db_lib.rs  diesel_apply_migration.rs  file_util.rs  form_struct.rs  local_test  local_test.rs  main.rs  models.rs  response_message.rs  schema.rs  scrapper_util.rs  song_processor.rs  utils.rs
src/backend_task/: mod.rs
src/youtube/: mod.rs
templates/: base.html.tera  csv_parser.html.tera  footer.html.tera  header.html.tera  home.html.tera  nav.html.tera  postgres_storage.html.tera  resume.html.tera  rocket_framework.html.tera  threading.html.tera  top-nav.html.tera  youtube_api.html.tera
