[package]
name = "spotify-music"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "serde_json", "chrono", "64-column-tables", "r2d2"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"
csv = "1"
chrono = "0.4.41"
serde = {"version" = "1", features = ["derive"]}
sha2 = "0.9.1"
r2d2 = "0.8.10"
rocket = {"version" = "0.5.1", features = ["json"]}
serde_json = "1.0.142"
urlencoding = "2.1.3"
reqwest = { "version" = "0.12.22", features = ["json", "blocking"] }
futures = {"version"="0.3.31"}

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]
